@@ -32,6 +32,9 @@ COM_DOCIMPORT_TITLE_CPANEL="Control Panel"
 COM_DOCIMPORT_CPANEL_NUKEURLS="Purge SEF URL cache"
 COM_DOCIMPORT_CPANEL_NUKEURLS_DONE="The SEF URL cache has been purged"
 
+AKEEBA_COMMON_PHPVERSIONTOOOLD_WARNING_TITLE="You are using an obsolete PHP version"
+AKEEBA_COMMON_PHPVERSIONTOOOLD_WARNING_BODY="Your site is running on PHP %s which has stopped receiving security updates since %s. Using this on a live site is <b>dangerous</b>: unpatched security issues can get your site hacked. Moreover, we will only support obsolete versions of PHP for nine months since their end-of-life date. Therefore we will discontinue support for your PHP version on %s. We strongly advise you to ask your host to upgrade your site to PHP %s or later."
+
 ; ------------------------------------------------------------------------------
 ; Categories
 ; ------------------------------------------------------------------------------
